@@ -47,11 +47,12 @@ import org.ednovo.gooru.core.api.model.UserRelationship;
 import org.ednovo.gooru.core.api.model.UserRole;
 import org.ednovo.gooru.core.api.model.UserRoleAssoc;
 import org.ednovo.gooru.core.api.model.UserSummary;
+import org.ednovo.gooru.core.constant.ConstantProperties;
+import org.ednovo.gooru.core.constant.ParameterProperties;
 import org.ednovo.gooru.infrastructure.persistence.hibernate.BaseRepositoryHibernate;
 import org.ednovo.gooru.infrastructure.persistence.hibernate.UserRepository;
 import org.hibernate.Criteria;
 import org.hibernate.Query;
-import org.hibernate.Session;
 import org.hibernate.SessionFactory;
 import org.hibernate.criterion.ProjectionList;
 import org.hibernate.criterion.Projections;
@@ -62,7 +63,7 @@ import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.stereotype.Repository;
 
 @Repository
-public class UserRepositoryHibernate extends BaseRepositoryHibernate implements UserRepository {
+public class UserRepositoryHibernate extends BaseRepositoryHibernate implements UserRepository, ParameterProperties, ConstantProperties {
 
 	private static final String EXTERNAL_ID = "externalId";
 
@@ -80,6 +81,27 @@ public class UserRepositoryHibernate extends BaseRepositoryHibernate implements 
 	private static final String INSERT_INVITE = "insert into Invites (FirstName,LastName,Email,School,message, LastDateInvited) values ('%s','%s','%s','%s','%s','%s');";
 	private static final String GET_USER_NAME_AVAILABILITY = "select count(1) as totalCount from user where username = :userName";
 	private static final String GET_EMAILID_AVAILABILITY = "select count(1) as totalCount from identity where external_id = :emailId";
+	private static final String USER_SUMMARY = "from UserSummary u where u.gooruUid =:gooruUid";
+	private static final String FETCH_CHILD_USERS_BY_BIRTHDAY = "select  u.username as child_user_name, i2.external_id as parent_email_id  from identity i inner join user u on u.gooru_uid=i.user_uid inner join profile p  on p.user_uid=u.gooru_uid inner join identity i2 on i2.user_uid=u.parent_uid  where  datediff(CURDATE(),p.date_of_birth) = 4748 and u.account_type_id=2";
+	private static final String FETCH_CHILD_USERS_BY_BIRTHDAY_COUNT = "select count(1) as count from identity i inner join user u on u.gooru_uid=i.user_uid inner join profile p  on p.user_uid=u.gooru_uid inner join identity i2 on i2.user_uid=u.parent_uid  where  datediff(CURDATE(),p.date_of_birth) = 4748 and u.account_type_id=2";
+	private static final String FETCH_USERS_BY_BIRTHDAY = "select  i.external_id as email_id , i.user_uid as user_id from identity i inner join profile p on (i.user_uid=p.user_uid) where p.date_of_birth is not null and month(p.date_of_birth) = month(now()) and day(p.date_of_birth) = day(now())  and i.external_id like '%@%'";
+	private static final String FETCH_USERS_BY_BIRTHDAY_COUNT = "select count(1) as count from identity i inner join profile p on (i.user_uid=p.user_uid) where p.date_of_birth is not null and month(p.date_of_birth) = month(now()) and day(p.date_of_birth) = day(now())  and i.external_id like '%@%'";
+	private static final String FIND_BY_REFERENCE_UID = "from User u where u.referenceUid = ?";
+	private static final String INACTIVE_USER_COUNT_FOR_LAST_TWO_WEEKS = "select count(1) as count from identity i inner join party_custom_field p on p.party_uid = i.user_uid where (date(last_login) between  date(last_login) and date_sub(now(),INTERVAL 2 WEEK) or  last_login is null) and p.optional_key = 'last_user_inactive_mail_send_date' and (p.optional_value = '-' or  date(p.optional_value) between  date(p.optional_value) and date_sub(now(),INTERVAL 2 WEEK))";
+	private static final String FIND_USER_PARTY_UID = "FROM User user WHERE user.partyUid = :partyUid";
+	private static final String SYSTEM_TIMESTAMP = "select now() ";
+	private static final String FIND_USER_WITHOUT_ORGANIZATION = "FROM User user WHERE user.username = :username";
+	private static final String FIND_SUPER_ADMIN_USER = "from User u where u.partyUid = :gooruUId ";
+	private static final String FIND_USER_GOORU_UID = "from User u where u.partyUid = :gooruUId AND " + generateUserIsDeleted("u.");
+	private static final String FIND_GENDER_BY_ID = "from Gender g where g.genderId = ?";
+	private static final String FIND_USER_ROLE_BY_NAME = "FROM UserRole ur WHERE ur.name =:name";
+	private static final String FIND_USER_ROLE_BY_UID = "FROM UserRole ur WHERE ur.roleId =:roleId";
+	private static final String FIND_ENTITY_OPERATION = "FROM EntityOperation eo where eo.entityName=:entityName and eo.operationName=:operationName";
+	private static final String CHECK_ROLE_ENTITY = "FROM RoleEntityOperation reo where reo.userRole.roleId=:roleId and reo.entityOperation.entityOperationId=:entityOperationId";
+	private static final String FETCH_ROLE_ENTITY_OPERATION = "FROM RoleEntityOperation reo where reo.userRole.roleId=:roleId ";
+	private static final String DELETE_USER_GROUP_MEMBER = "Delete FROM UserGroupAssociation userGroupAssociation WHERE userGroupAssociation.userGroup.partyUid = :partyUid and userGroupAssociation.user.partyUid IN (:partyUids)";
+	private static final String FIND_GROUP_USER_BY_IDS = "FROM UserGroupAssociation UGA WHERE UGA.user.partyUid IN (:partyUids)";
+	private static final String FIND_PARTY_ID = "FROM Party party WHERE party.partyUid =:partyUid";
 
 	@Autowired
 	public UserRepositoryHibernate(SessionFactory sessionFactory, JdbcTemplate jdbcTemplate) {
@@ -88,16 +110,14 @@ public class UserRepositoryHibernate extends BaseRepositoryHibernate implements 
 		setJdbcTemplate(jdbcTemplate);
 	}
 
+	@SuppressWarnings("unchecked")
 	@Override
-	/*
-	 * Function to get users based on their role(student,teacher)
-	 */
 	public List<User> findByRole(UserRole role) {
-
 		List<User> userList = find("from User user where user.userRole.roleId = " + role.getRoleId() + " AND " + generateOrgAuthQueryWithData("user.") + " AND " + generateUserIsDeleted("user."));
 		return userList.size() == 0 ? null : userList;
 	}
 
+	@SuppressWarnings("unchecked")
 	public String checkUserStatus(String email, String code) {
 		String userStatus = null;
 		List<Integer> results = getSession().createSQLQuery(FIND_REGISTERED_USER).addScalar(TOTAL_COUNT, StandardBasicTypes.INTEGER).setParameter("emailId", email).list();
@@ -116,7 +136,7 @@ public class UserRepositoryHibernate extends BaseRepositoryHibernate implements 
 			}
 
 		}
-		return (userStatus != null) ? userStatus : "unknown";
+		return (userStatus == null) ? "unknown" : userStatus;
 	}
 
 	public void invite(String firstname, String lastname, String email, String school, String message, String datestr) {
@@ -124,6 +144,7 @@ public class UserRepositoryHibernate extends BaseRepositoryHibernate implements 
 		this.getJdbcTemplate().update(messageSql);
 	}
 
+	@SuppressWarnings("unchecked")
 	@Override
 	public User findByToken(String sessionToken) {
 		Query userQuery = getSession().createQuery("select user FROM UserToken tok where tok.token = '" + sessionToken + "'");
@@ -138,36 +159,30 @@ public class UserRepositoryHibernate extends BaseRepositoryHibernate implements 
 
 	@Override
 	public Identity findIdentityByResetToken(String resetToken) {
-		Session session = getSession();
-		Query query = session.createQuery("SELECT identity FROM Identity identity join identity.credential credential  WHERE credential.token = '" + resetToken + "'");
-		releaseSession(session);
+		Query query = getSession().createQuery("SELECT identity FROM Identity identity join identity.credential credential  WHERE credential.token = '" + resetToken + "'");
 		return (Identity) (query.list().size() == 0 ? null : (query.list().get(0)));
 	}
 
 	@Override
 	public Identity findIdentityByRegisterToken(String registerToken) {
-		Session session = getSession();
-		Query query = session.createQuery("SELECT identity FROM Identity identity join identity.user user  WHERE user.registerToken = '" + registerToken + "'");
-		releaseSession(session);
+		Query query = getSession().createQuery("SELECT identity FROM Identity identity join identity.user user  WHERE user.registerToken = '" + registerToken + "'");
 		return (Identity) (query.list().size() == 0 ? null : (query.list().get(0)));
 	}
 
 	@Override
 	public Identity findUserByGooruId(String gooruId) {
-		Session session = getSession();
-		Query query = session.createQuery("SELECT identity FROM Identity identity join identity.user user  WHERE user.partyUid = '" + gooruId + "'");
-		releaseSession(session);
+		Query query = getSession().createQuery("SELECT identity FROM Identity identity join identity.user user  WHERE user.partyUid = '" + gooruId + "'");
 		return (Identity) (query.list().size() == 0 ? null : (query.list().get(0)));
 	}
 
+	@SuppressWarnings("unchecked")
 	@Override
 	public User findByIdentity(Identity identity) {
-
 		List<Identity> identityList = getSession().createCriteria(Identity.class).add(Restrictions.eq(EXTERNAL_ID, identity.getExternalId())).createAlias("user", "user").list();
 		return identityList.size() == 0 ? null : (identityList.get(0).getUser());
-
 	}
 
+	@SuppressWarnings("unchecked")
 	@Override
 	public List<User> findByIdentities(List<String> idList) {
 		List<User> userList = new ArrayList<User>();
@@ -176,27 +191,20 @@ public class UserRepositoryHibernate extends BaseRepositoryHibernate implements 
 			userList.add(id.getUser());
 		}
 		return userList.size() == 0 ? null : userList;
-
 	}
 
 	@Override
 	public User findByGooruId(String gooruId) {
-
-		Query query = getSession().createQuery("from User u where u.partyUid = :gooruUId AND " + generateUserIsDeleted("u."));
+		Query query = getSession().createQuery(FIND_USER_GOORU_UID);
 		query.setParameter("gooruUId", gooruId);
-		List<User> userList = query.list();
-
-		return userList.size() == 0 ? null : userList.get(0);
+		return query.list().size() > 0 ? (User) query.list().get(0) : null;
 	}
 
 	@Override
 	public User findByGooruIdforSuperAdmin(String gooruId) {
-
-		Query query = getSession().createQuery("from User u where u.partyUid = :gooruUId ");
+		Query query = getSession().createQuery(FIND_SUPER_ADMIN_USER);
 		query.setParameter("gooruUId", gooruId);
-		List<User> userList = query.list();
-
-		return userList.size() == 0 ? null : userList.get(0);
+		return query.list().size() > 0 ? (User) query.list().get(0) : null;
 	}
 
 	@Override
@@ -205,9 +213,7 @@ public class UserRepositoryHibernate extends BaseRepositoryHibernate implements 
 		Query query = getSession().createQuery(hql);
 		query.setParameter(EXTERNAL_ID, emailId);
 		addOrgAuthParameters(query);
-
-		List<Identity> identityList = (List<Identity>) query.list();
-		return identityList.size() > 0 ? identityList.get(0) : null;
+		return query.list().size() > 0 ? (Identity) query.list().get(0) : null;
 	}
 
 	public Profile getProfile(User user, boolean isSsoLogin) {
@@ -220,10 +226,10 @@ public class UserRepositoryHibernate extends BaseRepositoryHibernate implements 
 		if (!isSsoLogin) {
 			addOrgAuthParameters(query);
 		}
-		List<Profile> profileList = (List<Profile>) query.list();
-		return profileList.size() == 0 ? null : profileList.get(0);
+		return query.list().size() == 0 ? null : (Profile) query.list().get(0);
 	}
 
+	@SuppressWarnings("unchecked")
 	@Override
 	public List<Identity> findAllIdentities() {
 
@@ -238,18 +244,16 @@ public class UserRepositoryHibernate extends BaseRepositoryHibernate implements 
 		return identityList.size() == 0 ? null : identityList;
 	}
 
-	// FIXME: Deprecated
 	@Override
 	public boolean findRegisteredUser(String emailId) {
 		int count = this.getJdbcTemplate().queryForInt(FIND_REGISTERED_USER, new Object[] { emailId });
+		Boolean isRegisteredUser = false;
 		if (count > 0) {
-			return true;
-		} else {
-			return false;
+			isRegisteredUser = true;
 		}
+		return isRegisteredUser;
 	}
 
-	// FIXME: Deprecated
 	@Override
 	public void registerUser(String emailId, String date) {
 
@@ -275,6 +279,7 @@ public class UserRepositoryHibernate extends BaseRepositoryHibernate implements 
 		this.getJdbcTemplate().update(updateSegment);
 	}
 
+	@SuppressWarnings("unchecked")
 	@Override
 	public int findAgeCheck(User user) {
 		Query query = getSession().createSQLQuery(FIND_AGE_CHECK);
@@ -293,69 +298,61 @@ public class UserRepositoryHibernate extends BaseRepositoryHibernate implements 
 		this.jdbcTemplate = jdbcTemplate;
 	}
 
+	@SuppressWarnings("unchecked")
 	@Override
-	public List<User> getFollowedByUsers(String gooruUId, Integer offset, Integer limit, boolean skipPagination) {
-		Session session = getSession();
+	public List<User> getFollowedByUsers(String gooruUId, Integer offset, Integer limit) {
 		String hql = "SELECT userRelation.user FROM UserRelationship userRelation  WHERE userRelation.followOnUser.partyUid = '" + gooruUId + "' AND userRelation.activeFlag = 1 AND " + generateOrgAuthQueryWithData("userRelation.user.") + " AND " + generateUserIsDeleted("userRelation.user.");
-		Query query = session.createQuery(hql);
-		if (!skipPagination) {
-			query.setFirstResult(offset);
-			query.setMaxResults(limit);
-		}
+		Query query = getSession().createQuery(hql);
+		query.setFirstResult(offset);
+		query.setMaxResults(limit != null ? (limit > MAX_LIMIT ? MAX_LIMIT : limit) : LIMIT);
 		return query.list();
 	}
-	
+
 	@Override
 	public long getFollowedByUsersCount(String gooruUId) {
-		Session session = getSession();
 		String hql = "SELECT count(*) FROM UserRelationship userRelation  WHERE userRelation.followOnUser.partyUid = '" + gooruUId + "' AND userRelation.activeFlag = 1 AND " + generateOrgAuthQueryWithData("userRelation.user.") + " AND " + generateUserIsDeleted("userRelation.user.");
-		Query query = session.createQuery(hql);
-		return (Long) query.list().get(0);
-	}
-	
-	@Override
-	public long getFollowedOnUsersCount(String gooruUId) {
-		Session session = getSession();
-		String hql = "SELECT count(*) FROM UserRelationship userRelation WHERE userRelation.user.partyUid = '" + gooruUId + "' AND userRelation.activeFlag = 1  AND " + generateOrgAuthQueryWithData("userRelation.user.") + " AND " + generateUserIsDeleted("userRelation.user.");
-		Query query = session.createQuery(hql);
+		Query query = getSession().createQuery(hql);
 		return (Long) query.list().get(0);
 	}
 
 	@Override
-	public List<User> getFollowedOnUsers(String gooruUId, Integer offset, Integer limit, boolean skipPagination) {
-		Session session = getSession();
+	public long getFollowedOnUsersCount(String gooruUId) {
+		String hql = "SELECT count(*) FROM UserRelationship userRelation WHERE userRelation.user.partyUid = '" + gooruUId + "' AND userRelation.activeFlag = 1  AND " + generateOrgAuthQueryWithData("userRelation.user.") + " AND " + generateUserIsDeleted("userRelation.user.");
+		Query query = getSession().createQuery(hql);
+		return (Long) query.list().get(0);
+	}
+
+	@SuppressWarnings("unchecked")
+	@Override
+	public List<User> getFollowedOnUsers(String gooruUId, Integer offset, Integer limit) {
 		String hql = "SELECT userRelation.followOnUser FROM UserRelationship userRelation WHERE userRelation.user.partyUid = '" + gooruUId + "' AND userRelation.activeFlag = 1  AND " + generateOrgAuthQueryWithData("userRelation.user.") + " AND " + generateUserIsDeleted("userRelation.user.");
-		Query query = session.createQuery(hql);
-		if (!skipPagination) {
-			query.setFirstResult(offset);
-			query.setMaxResults(limit);
-		}
+		Query query = getSession().createQuery(hql);
+		query.setFirstResult(offset);
+		query.setMaxResults(limit == null ? LIMIT : (limit > MAX_LIMIT ? MAX_LIMIT : limit));
 		return query.list();
 	}
 
+	@SuppressWarnings("unchecked")
 	@Override
 	public UserRelationship getActiveUserRelationship(String gooruUserId, String gooruFollowOnUserId) {
-
 		List<UserRelationship> relationships = addOrgAuthCriterias(getSession().createCriteria(UserRelationship.class), "user.").createAlias("user", "user").createAlias("followOnUser", "followOnUser").add(Restrictions.eq("user.partyUid", gooruUserId))
 				.add(Restrictions.eq("followOnUser.partyUid", gooruFollowOnUserId)).add(Restrictions.eq("activeFlag", true)).list();
-
 		return (relationships.size() > 0) ? relationships.get(0) : null;
 	}
 
+	@SuppressWarnings("rawtypes")
 	@Override
 	public User findByRemeberMeToken(String remeberMeToken) {
 		Object[] obj = new Object[1];
 		obj[0] = (Object) remeberMeToken;
-
 		List<Map<String, Object>> rows = this.getJdbcTemplate().queryForList(FIND_USER_BY_TOKEN, obj);
-
 		User user = null;
 		for (Map row : rows) {
 			user = new User();
 			user.setGooruUId((String) row.get("gooru_uid"));
 			user.setFirstName((String) row.get("firstname"));
 			user.setLastName((String) row.get("lastname"));
-			user.setUserId(new Integer(String.valueOf(row.get("user_id"))));
+			user.setUserId(Integer.valueOf((String.valueOf(row.get("user_id")))));
 			user.setEmailId((String) row.get("external_id"));
 
 			List<UserRoleAssoc> userRoleSet = this.findUserRoleSet(user);
@@ -364,98 +361,90 @@ public class UserRepositoryHibernate extends BaseRepositoryHibernate implements 
 			}
 			break;
 		}
-
 		return user;
 	}
 
+	@SuppressWarnings("unchecked")
 	@Override
 	public List<UserRoleAssoc> findUserRoleSet(User user) {
 		return find("From UserRoleAssoc userRoleAssoc  WHERE userRoleAssoc.user.partyUid = " + user.getGooruUId() + "  AND " + generateOrgAuthQueryWithData("userRoleAssoc.user.") + " AND " + generateUserIsDeleted("userRoleAssoc.user."));
 	}
 
+	@SuppressWarnings("unchecked")
 	@Override
 	public boolean checkUserAvailability(String keyword, CheckUser type, boolean isCollaboratorCheck) {
 		List<Boolean> availability = null;
-
 		if (type == CheckUser.BYUSERNAME) {
 			String sql = GET_USER_NAME_AVAILABILITY;
 			if (isCollaboratorCheck) {
 				sql += " and user.primary_organization_uid IN (" + getUserOrganizationUidsAsString() + ") OR user.organization_uid ='" + getCurrentUserPrimaryOrganization().getPartyUid() + "'";
 			}
-				availability = getSession().createSQLQuery(sql).addScalar(TOTAL_COUNT, StandardBasicTypes.BOOLEAN).setParameter("userName", keyword).list();
+			availability = getSession().createSQLQuery(sql).addScalar(TOTAL_COUNT, StandardBasicTypes.BOOLEAN).setParameter("userName", keyword).list();
 		} else if (type == CheckUser.BYEMAILID) {
 			availability = getSession().createSQLQuery(GET_EMAILID_AVAILABILITY).addScalar(TOTAL_COUNT, StandardBasicTypes.BOOLEAN).setParameter("emailId", keyword).list();
 		}
 		return (availability != null && availability.size() > 0) ? availability.get(0) : false;
 	}
 
+	@SuppressWarnings("unchecked")
 	@Override
 	public List<User> listUsers() {
 		return addOrgAuthCriterias(getSession().createCriteria(User.class)).list();
 	}
 
+	@SuppressWarnings("unchecked")
 	@Override
 	public Gender getGenderByGenderId(String genderId) {
-		List<Gender> genderList = getSession().createQuery("from Gender g where g.genderId = ?").setParameter(0, genderId).list();
+		List<Gender> genderList = getSession().createQuery(FIND_GENDER_BY_ID).setParameter(0, genderId).list();
 		return genderList.size() == 0 ? null : genderList.get(0);
 	}
 
+	@SuppressWarnings("unchecked")
 	@Override
 	public List<UserRole> findRolesByNames(String roles) {
-		
 		String hql = " FROM UserRole ur WHERE ur.name IN (:roleNames) and  " + generateOrgAuthQuery("ur.");
 		Query query = getSession().createQuery(hql);
 		query.setParameterList("roleNames", roles.split(","));
 		addOrgAuthParameters(query);
-		List<UserRole> userRoles = query.list();
-		return userRoles.size() > 0 ? userRoles : null;
+		return query.list();
 	}
 
 	public UserRole findUserRoleByName(String name, String organizationUids) {
-		String hql = "FROM UserRole ur WHERE ur.name =:name ";
-		Query query = getSession().createQuery(hql);
+		Query query = getSession().createQuery(FIND_USER_ROLE_BY_NAME);
 		query.setParameter("name", name);
-	   List<UserRole> userRole = query.list();
-		return (userRole.size() > 0) ? userRole.get(0) : null;
+		return (UserRole) ((query.list().size() > 0) ? query.list().get(0) : null);
 	}
 
 	@Override
 	public UserRole findUserRoleByRoleId(Short roleId) {
-		String hql = "FROM UserRole ur WHERE ur.roleId =:roleId ";
-		Query query = getSession().createQuery(hql);
+		Query query = getSession().createQuery(FIND_USER_ROLE_BY_UID);
 		query.setParameter("roleId", roleId);
-		List<UserRole> userRole = query.list();
-		return (userRole.size() > 0) ? userRole.get(0) : null;
+		return (UserRole) ((query.list().size() > 0) ? query.list().get(0) : null);
 	}
 
 	@Override
 	public EntityOperation findEntityOperation(String entityName, String operationName) {
-		String hql = "FROM EntityOperation eo where eo.entityName=:entityName and eo.operationName=:operationName";
-		Query query = getSession().createQuery(hql);
+		Query query = getSession().createQuery(FIND_ENTITY_OPERATION);
 		query.setParameter("entityName", entityName);
 		query.setParameter("operationName", operationName);
-		List<EntityOperation> entityOperations = query.list();
-		return (entityOperations.size() > 0) ? entityOperations.get(0) : null;
+		return (EntityOperation) ((query.list().size() > 0) ? query.list().get(0) : null);
 
 	}
 
 	@Override
 	public RoleEntityOperation checkRoleEntity(Short roleId, Integer entityOperationId) {
-		String hql = "FROM RoleEntityOperation reo where reo.userRole.roleId=:roleId and reo.entityOperation.entityOperationId=:entityOperationId";
-		Query query = getSession().createQuery(hql);
+		Query query = getSession().createQuery(CHECK_ROLE_ENTITY);
 		query.setParameter("roleId", roleId);
 		query.setParameter("entityOperationId", entityOperationId);
-		List<RoleEntityOperation> roleEntityOperations = query.list();
-		return (roleEntityOperations.size() > 0) ? roleEntityOperations.get(0) : null;
+		return (RoleEntityOperation) ((query.list().size() > 0) ? query.list().get(0) : null);
 	}
 
+	@SuppressWarnings("unchecked")
 	@Override
 	public List<RoleEntityOperation> getRoleEntityOperations(Short roleId) {
-		String hql = "FROM RoleEntityOperation reo where reo.userRole.roleId=:roleId ";
-		Query query = getSession().createQuery(hql);
+		Query query = getSession().createQuery(FETCH_ROLE_ENTITY_OPERATION);
 		query.setParameter("roleId", roleId);
-		List<RoleEntityOperation> roleEntityOperations = query.list();
-		return (roleEntityOperations.size() > 0) ? roleEntityOperations : null;
+		return query.list();
 	}
 
 	@Override
@@ -464,10 +453,10 @@ public class UserRepositoryHibernate extends BaseRepositoryHibernate implements 
 		Query query = getSession().createQuery(hql);
 		query.setParameter("importCode", importCode);
 		addOrgAuthParameters(query);
-		List<User> users = query.list();
-		return users.size() > 0 ? users.get(0) : null;
+		return (User) (query.list().size() > 0 ? query.list().get(0) : null);
 	}
 
+	@SuppressWarnings("unchecked")
 	@Override
 	public List<UserRoleAssoc> getUserRoleByName(String roles, String userId) {
 		String hql = "From UserRoleAssoc ura  where ura.role.name IN(:roleNames) and ura.user.partyUid =:partyUid and " + generateOrgAuthQuery("ura.user.") + " and " + generateUserIsDeleted("ura.user.");
@@ -475,10 +464,10 @@ public class UserRepositoryHibernate extends BaseRepositoryHibernate implements 
 		query.setParameter("partyUid", userId);
 		query.setParameterList("roleNames", roles.split(","));
 		addOrgAuthParameters(query);
-		List<UserRoleAssoc> userRoleAssocs = query.list();
-		return userRoleAssocs.size() > 0 ? userRoleAssocs : null;
+		return query.list();
 	}
 
+	@SuppressWarnings("unchecked")
 	@Override
 	public List<RoleEntityOperation> findEntityOperationByRole(String roleNames) {
 		String hql = " FROM  RoleEntityOperation rp WHERE rp.userRole.name IN (:roleNames) ";
@@ -487,9 +476,10 @@ public class UserRepositoryHibernate extends BaseRepositoryHibernate implements 
 		return query.list();
 	}
 
+	@SuppressWarnings("unchecked")
 	@Override
 	public List<UserRole> findAllRoles() {
-		String hql = "select userRole from UserRole userRole where "+ generateOrgAuthQuery("userRole.");
+		String hql = "select userRole from UserRole userRole where " + generateOrgAuthQuery("userRole.");
 		Query query = getSession().createQuery(hql);
 		addOrgAuthParameters(query);
 		return query.list();
@@ -497,18 +487,17 @@ public class UserRepositoryHibernate extends BaseRepositoryHibernate implements 
 
 	@Override
 	public User getUserByUserName(String userName, boolean isLoginRequest) {
-		String hql = "FROM User  user WHERE user.username = :username " ;
-		if(!isLoginRequest){
-			hql +=" and " + generateOrgAuthQuery("user.");
+		String hql = "FROM User  user WHERE user.username = :username ";
+		if (!isLoginRequest) {
+			hql += " and " + generateOrgAuthQuery("user.");
 		}
 		hql += " and " + generateUserIsDeleted("user.");
 		Query query = getSession().createQuery(hql);
 		query.setParameter("username", userName);
-		if(!isLoginRequest){
+		if (!isLoginRequest) {
 			addOrgAuthParameters(query);
 		}
-		List<User> users = query.list();
-		return users.size() > 0 ? users.get(0) : null;
+		return (User) (query.list().size() > 0 ? query.list().get(0) : null);
 	}
 
 	@Override
@@ -528,10 +517,10 @@ public class UserRepositoryHibernate extends BaseRepositoryHibernate implements 
 		if (!isLoginRequest) {
 			addOrgAuthParameters(query);
 		}
-		List<Identity> identityList = (List<Identity>) query.list();
-		return identityList.size() > 0 ? identityList.get(0) : null;
+		return (Identity) (query.list().size() > 0 ? query.list().get(0) : null);
 	}
 
+	@SuppressWarnings("unchecked")
 	@Override
 	public boolean checkUserFirstLogin(String userId) {
 		String sql = "select count(1) from identity where user_uid='" + userId + "' and last_login is null";
@@ -546,8 +535,7 @@ public class UserRepositoryHibernate extends BaseRepositoryHibernate implements 
 		Query query = getSession().createQuery(hql);
 		query.setParameter("userId", userId);
 		addOrgAuthParameters(query);
-		List<User> users = query.list();
-		return users.size() > 0 ? users.get(0) : null;
+		return (User) (query.list().size() > 0 ? query.list().get(0) : null);
 	}
 
 	@Override
@@ -555,8 +543,7 @@ public class UserRepositoryHibernate extends BaseRepositoryHibernate implements 
 		String hql = "FROM UserGroup userGroup WHERE userGroup.groupCode = :groupCode";
 		Query query = getSession().createQuery(hql);
 		query.setParameter("groupCode", groupCode);
-		List<UserGroup> usersGroup = query.list();
-		return usersGroup.size() > 0 ? usersGroup.get(0) : null;
+		return (UserGroup) (query.list().size() > 0 ? query.list().get(0) : null);
 	}
 
 	@Override
@@ -572,19 +559,19 @@ public class UserRepositoryHibernate extends BaseRepositoryHibernate implements 
 		String hql = "FROM UserGroup userGroup WHERE userGroup.partyUid = :groupUid";
 		Query query = getSession().createQuery(hql);
 		query.setParameter("groupUid", groupUid);
-		List<UserGroup> usersGroup = query.list();
-		return usersGroup.size() > 0 ? usersGroup.get(0) : null;
+		return (UserGroup) (query.list().size() > 0 ? query.list().get(0) : null);
 	}
 
+	@SuppressWarnings("unchecked")
 	@Override
 	public List<User> findGroupUsers(String groupUid) {
 		String hql = "SELECT uga.user FROM UserGroupAssociation uga  WHERE uga.userGroup.partyUid = :partyUid";
 		Query query = getSession().createQuery(hql);
 		query.setParameter("partyUid", groupUid);
-		List<User> users = query.list();
-		return users.size() > 0 ? users : null;
+		return query.list();
 	}
 
+	@SuppressWarnings("unchecked")
 	@Override
 	public List<User> listUsers(Map<String, String> filters) {
 
@@ -601,21 +588,22 @@ public class UserRepositoryHibernate extends BaseRepositoryHibernate implements 
 		Query query = getSession().createQuery(hql);
 		addOrgAuthParameters(query);
 		query.setFirstResult((pageNum - 1) * pageSize);
-		query.setMaxResults(pageSize);
+		query.setMaxResults(pageSize <= MAX_LIMIT ? pageSize : MAX_LIMIT);
 		return query.list();
 	}
 
+	@SuppressWarnings("unchecked")
 	@Override
 	public List<User> findUserByIds(String ownerIds) {
 		String hql = "FROM User user WHERE user.partyUid IN (:partyUids) and " + generateOrgAuthQuery("user.") + " and " + generateUserIsDeleted("user.");
 		Query query = getSession().createQuery(hql);
 		query.setParameterList("userId", ownerIds.split(","));
 		addOrgAuthParameters(query);
-		List<User> users = query.list();
-		return users.size() > 0 ? users : null;
+		return query.list();
 
 	}
 
+	@SuppressWarnings("unchecked")
 	@Override
 	public List<UserGroup> findAllGroups() {
 		return getSession().createCriteria(UserGroup.class).list();
@@ -623,14 +611,13 @@ public class UserRepositoryHibernate extends BaseRepositoryHibernate implements 
 
 	@Override
 	public String removeUserGroupMemebrByGroupUid(String groupUid, String gooruUids) {
-		String hql = "Delete FROM UserGroupAssociation userGroupAssociation WHERE userGroupAssociation.userGroup.partyUid = :partyUid and userGroupAssociation.user.partyUid IN (:partyUids)";
-		Query query = getSession().createQuery(hql);
+		Query query = getSession().createQuery(DELETE_USER_GROUP_MEMBER);
 		query.setParameter("partyUid", groupUid);
 		query.setParameterList("partyUids", gooruUids.split(","));
 		query.executeUpdate();
 		return "Deleted Successfully";
 	}
-	
+
 	@Override
 	public UserGroupAssociation getUserGroupMemebrByGroupUid(String groupUid, String gooruUid) {
 		String hql = " FROM UserGroupAssociation userGroupAssociation WHERE userGroupAssociation.userGroup.partyUid = :groupUid and userGroupAssociation.user.partyUid =:gooruUid";
@@ -646,62 +633,43 @@ public class UserRepositoryHibernate extends BaseRepositoryHibernate implements 
 		Query query = getSession().createQuery(hql);
 		query.setParameter("groupUid", groupUid);
 		query.setParameter("gooruUid", gooruUid);
-		List<UserGroupAssociation> users = query.list();
-		return users.size() > 0 ? true : false;
+		return query.list().size() > 0 ? true : false;
 	}
 
+	@SuppressWarnings("unchecked")
 	@Override
 	public List<UserGroupAssociation> findGroupUserByIds(String ownerIds) {
-		String hql = "FROM UserGroupAssociation UGA WHERE UGA.user.partyUid IN (:partyUids)";
-		Query query = getSession().createQuery(hql);
+		Query query = getSession().createQuery(FIND_GROUP_USER_BY_IDS);
 		query.setParameterList("partyUids", ownerIds.split(","));
 		addOrgAuthParameters(query);
-		List<UserGroupAssociation> userGroupAssoc = query.list();
-		return userGroupAssoc.size() > 0 ? userGroupAssoc : null;
-
+		return query.list().size() > 0 ? query.list() : null;
 	}
 
 	@Override
 	public Party findPartyById(String partyUid) {
-		String hql = "FROM Party party WHERE party.partyUid =:partyUid";
-		Query query = getSession().createQuery(hql);
+		Query query = getSession().createQuery(FIND_PARTY_ID);
 		query.setParameter("partyUid", partyUid);
-		List<Party> party = query.list();
-		return party.size() > 0 ? party.get(0) : null;
-
+		return (Party) (query.list().size() > 0 ? query.list().get(0) : null);
 	}
 
 	@Override
 	public User findUserByPartyUid(String partyUid) {
-		String hql = "FROM User user WHERE user.partyUid = :partyUid";
-		Query query = getSession().createQuery(hql);
+		Query query = getSession().createQuery(FIND_USER_PARTY_UID);
 		query.setParameter("partyUid", partyUid);
-		List<User> users = query.list();
-		return users.size() > 0 ? users.get(0) : null;
-	}
-
-	@Override
-	public List<Profile> getProfileList() {
-		String hql = "FROM Profile profile WHERE profile.dateOfBirth IS NOT NULL ";
-		Query query = getSession().createQuery(hql);
-		List<Profile> profileList = query.list();
-
-		return profileList.size() > 0 ? profileList : null;
+		return (User) (query.list().size() > 0 ? query.list().get(0) : null);
 	}
 
 	@Override
 	public User findUserWithoutOrganization(String username) {
-		String hql = "FROM User user WHERE user.username = :username";
-		Query query = getSession().createQuery(hql);
+		Query query = getSession().createQuery(FIND_USER_WITHOUT_ORGANIZATION);
 		query.setParameter("username", username);
-		List<User> users = query.list();
-		return users.size() > 0 ? users.get(0) : null;
+		return (User) (query.list().size() > 0 ? query.list().get(0) : null);
 	}
 
+	@SuppressWarnings("unchecked")
 	@Override
 	public Timestamp getSystemCurrentTime() {
-		String sql = " select now() ";
-		List<Timestamp> results = getSession().createSQLQuery(sql).list();
+		List<Timestamp> results = getSession().createSQLQuery(SYSTEM_TIMESTAMP).list();
 		return results.size() > 0 ? results.get(0) : null;
 	}
 
@@ -725,6 +693,7 @@ public class UserRepositoryHibernate extends BaseRepositoryHibernate implements 
 		return (UserClassification) (query.list().size() > 0 ? query.list().get(0) : null);
 	}
 
+	@SuppressWarnings("unchecked")
 	@Override
 	public List<UserClassification> getUserClassifications(String gooruUid, Integer classificationId, Integer flag) {
 		String hql = "FROM UserClassification userClassification WHERE userClassification.user.partyUid=:gooruUid and userClassification.type.customTableValueId=:classificationId   and " + generateOrgAuthQuery("userClassification.user.");
@@ -738,19 +707,19 @@ public class UserRepositoryHibernate extends BaseRepositoryHibernate implements 
 		return query.list();
 	}
 
+	@SuppressWarnings("unchecked")
 	@Override
 	public List<Object[]> getInactiveUsers(Integer offset, Integer limit) {
 		String sql = "select user_uid as user_uid,  external_id as email_id from identity i inner join party_custom_field p on p.party_uid = i.user_uid where (date(last_login) between  date(last_login) and date_sub(now(),INTERVAL 2 WEEK) or  last_login is null) and p.optional_key = 'last_user_inactive_mail_send_date' and (p.optional_value = '-' or  date(p.optional_value) between  date(p.optional_value) and date_sub(now(),INTERVAL 2 WEEK))";
 		Query query = getSession().createSQLQuery(sql).addScalar("user_uid", StandardBasicTypes.STRING).addScalar("email_id", StandardBasicTypes.STRING);
 		query.setFirstResult(offset);
-		query.setMaxResults(limit);
+		query.setMaxResults(limit != null ? (limit > MAX_LIMIT ? MAX_LIMIT : limit) : LIMIT);
 		return query.list();
 	}
 
 	@Override
 	public Integer getInactiveUsersCount() {
-		String sql = "select count(1) as count from identity i inner join party_custom_field p on p.party_uid = i.user_uid where (date(last_login) between  date(last_login) and date_sub(now(),INTERVAL 2 WEEK) or  last_login is null) and p.optional_key = 'last_user_inactive_mail_send_date' and (p.optional_value = '-' or  date(p.optional_value) between  date(p.optional_value) and date_sub(now(),INTERVAL 2 WEEK))";
-		Query query = getSession().createSQLQuery(sql).addScalar("count", StandardBasicTypes.INTEGER);
+		Query query = getSession().createSQLQuery(INACTIVE_USER_COUNT_FOR_LAST_TWO_WEEKS).addScalar("count", StandardBasicTypes.INTEGER);
 		return (Integer) query.list().get(0);
 	}
 
@@ -764,7 +733,6 @@ public class UserRepositoryHibernate extends BaseRepositoryHibernate implements 
 	@Override
 	public String getUserGrade(String userUid, Integer classificationId, Integer activeFlag) {
 		String sql = "select group_concat(grade) as grade from user_classification uc  where uc.user_Uid ='" + userUid + "' and uc.classification_type='" + classificationId + "'";
-
 		if (activeFlag != null) {
 			sql += "and uc.active_flag ='" + activeFlag + "'";
 		}
@@ -772,45 +740,45 @@ public class UserRepositoryHibernate extends BaseRepositoryHibernate implements 
 		return (String) query.list().get(0);
 	}
 
+	@SuppressWarnings("unchecked")
 	@Override
-	public User findByReferenceuId(String referenceUid) {
-		List<User> userList = getSession().createQuery("from User u where u.referenceUid = ?").setParameter(0, referenceUid).list();
+	public User findByReferenceUid(String referenceUid) {
+		List<User> userList = getSession().createQuery(FIND_BY_REFERENCE_UID).setParameter(0, referenceUid).list();
 		return userList.size() == 0 ? null : userList.get(0);
 	}
 
 	@Override
 	public Integer getUserBirthdayCount() {
-		Query query = getSession().createSQLQuery("select count(1) as count from identity i inner join profile p on (i.user_uid=p.user_uid) where p.date_of_birth is not null and month(p.date_of_birth) = month(now()) and day(p.date_of_birth) = day(now())  and i.external_id like '%@%'").addScalar("count", StandardBasicTypes.INTEGER);
+		Query query = getSession().createSQLQuery(FETCH_USERS_BY_BIRTHDAY_COUNT).addScalar("count", StandardBasicTypes.INTEGER);
 		return (Integer) query.list().get(0);
 	}
 
+	@SuppressWarnings("unchecked")
 	@Override
 	public List<Object[]> listUserByBirthDay(Integer offset, Integer limit) {
-		String sql = "select  i.external_id as email_id , i.user_uid as user_id from identity i inner join profile p on (i.user_uid=p.user_uid) where p.date_of_birth is not null and month(p.date_of_birth) = month(now()) and day(p.date_of_birth) = day(now())  and i.external_id like '%@%'";
-		Query query = getSession().createSQLQuery(sql).addScalar("email_id", StandardBasicTypes.STRING).addScalar("user_id", StandardBasicTypes.STRING);
+		Query query = getSession().createSQLQuery(FETCH_USERS_BY_BIRTHDAY).addScalar("email_id", StandardBasicTypes.STRING).addScalar("user_id", StandardBasicTypes.STRING);
 		query.setFirstResult(offset);
-		query.setMaxResults(limit);
+		query.setMaxResults(limit == null ? LIMIT : (limit > MAX_LIMIT ? MAX_LIMIT : limit));
 		return query.list();
 	}
-	
+
 	@Override
 	public Integer getChildUserBirthdayCount() {
-		Query query = getSession().createSQLQuery("select count(1) as count from identity i inner join user u on u.gooru_uid=i.user_uid inner join profile p  on p.user_uid=u.gooru_uid inner join identity i2 on i2.user_uid=u.parent_uid  where  datediff(CURDATE(),p.date_of_birth) = 4748 and u.account_type_id=2").addScalar("count", StandardBasicTypes.INTEGER);
+		Query query = getSession().createSQLQuery(FETCH_CHILD_USERS_BY_BIRTHDAY_COUNT).addScalar("count", StandardBasicTypes.INTEGER);
 		return (Integer) query.list().get(0);
 	}
-	
+
+	@SuppressWarnings("unchecked")
 	@Override
 	public List<Object[]> listChildUserByBirthDay() {
-		String sql = "select  u.username as child_user_name, i2.external_id as parent_email_id  from identity i inner join user u on u.gooru_uid=i.user_uid inner join profile p  on p.user_uid=u.gooru_uid inner join identity i2 on i2.user_uid=u.parent_uid  where  datediff(CURDATE(),p.date_of_birth) = 4748 and u.account_type_id=2";
-		Query query = getSession().createSQLQuery(sql).addScalar("child_user_name", StandardBasicTypes.STRING).addScalar("parent_email_id", StandardBasicTypes.STRING);
+		Query query = getSession().createSQLQuery(FETCH_CHILD_USERS_BY_BIRTHDAY).addScalar("child_user_name", StandardBasicTypes.STRING).addScalar("parent_email_id", StandardBasicTypes.STRING);
 		return query.list();
 	}
-	
+
 	@Override
 	public UserSummary getSummaryByUid(String gooruUid) {
-		String hql = "from UserSummary u where u.gooruUid =:gooruUid";
-		Query query = getSession().createQuery(hql).setParameter("gooruUid", gooruUid);
-		return query.list().size() > 0 ? (UserSummary)query.list().get(0) : new UserSummary();
+		Query query = getSession().createQuery(USER_SUMMARY).setParameter("gooruUid", gooruUid);
+		return query.list().size() > 0 ? (UserSummary) query.list().get(0) : new UserSummary();
 	}
 
 }
